fix overflow width

--- a/soydantarim/src/sass/pages/_gallery.scss
+++ b/soydantarim/src/sass/pages/_gallery.scss
@@ -1,7 +1,5 @@
 main.gallery {
   padding: 2rem;
-  width: 100vw;
- 
 }
 
 .gallery>h1 {
